manifests/base/shipping/istio/sidecar.yaml
apiVersion: networking.istio.io/v1
kind: Sidecar
metadata:
  name: shippingservice
  namespace: shippingservice
spec:
  workloadSelector:
    labels:
      app: shippingservice
  egress:
    - hosts:
        - "istio-system/*"
