manifests/base/shipping/istio/authorizationpolicy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: shippingservice
  namespace: shippingservice
spec:
  selector:
    matchLabels:
      app: shippingservice
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              [
                "cluster.local/ns/frontend/sa/frontend",
                "cluster.local/ns/checkoutservice/sa/checkoutservice",
              ]
